Implement delegate authentication for prod and remove authentication for dev
